--- a/app/src/main/resources/css/control-tokens.css
+++ b/app/src/main/resources/css/control-tokens.css
@@ -182,6 +182,7 @@
     display: inline-block;
     width: 16px;
     height: 16px;
+    vertical-align: middle;
     background: center / contain no-repeat;
 }
 .sbb-icon-save {
